--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,22 @@
     --goo-blue: #3f3fff;
 }
 
+html {
+    width: 100vw;
+    height: 100vh;
+}
+
 .b {
     color: var(--goo-blue);
 }
 
+main {
+    overflow-x: hidden;
+    width: 100%;
+    position:absolute;
+    z-index: -10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
