Worked more on the nav bar

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,18 @@ main {
 }
 
 nav a {
-    padding-left: 1em;
-    padding-right: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
     color: black;
+}
+
+div.services {
+    display: block;
+    margin: auto;
+    margin-top: 400px;
+}
+
+div.services span {
+    display: inline-block;
+    margin: 0.25em;
 }
