--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,14 @@ html {
 .b {
     background-color: var(--goo-blue);
     color: black;
-    margin-right: 30px;
+    text-align: center;
+    margin: 50px;
+    margin-left: 10px;
+    border-radius: 3px;
+}
+
+.b:hover{
+    opacity: 0.8;
 }
 
 main {
@@ -29,7 +36,7 @@ main {
     height: 100%;
 }
 
-.a {
+.na {
     text-align: center;
     color: black;
 }
