--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,9 @@ html {
 }
 
 .page{
-    position:absolute;
-    left: 40%;
+    position: fixed;
+    bottom: 35%;
+    left: 35%;
 }
 
 .s {
@@ -29,7 +30,7 @@ html {
     position: absolute;
 }
 
-.b:hover{
+.s:hover{
     opacity: 0.8;
 }
 
@@ -82,11 +83,6 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-nav a {
-    display: inline-block;
-    box-shadow: var(--goo-blue) 2px 2px 2px 2px;
 }
 
 div.services {
