--- a/styles.css
+++ b/styles.css
@@ -27,57 +27,15 @@ html {
 
 .b {
     position: absolute;
+    left: 45%;
     top: 75%;
+    letter-spacing: 10#;
 }
 
 .b:hover{
     opacity: 0.8;
 }
-/*
-.w {
-    color: black;
-    position: absolute;
-    left: 47%;
-    top: 75%;
-}
 
-.w:hover{
-    opacity: 0.8;
-}
-
-.a {
-    color: black;
-    position: absolute;
-    left: 55%;
-    top: 75%;
-}
-
-.a:hover{
-    opacity: 0.8;
-}
-
-.c {
-    color: black;
-    position: absolute;
-    left: 63%;
-    top: 75%;
-}
-
-.c:hover{
-    opacity: 0.8;
-}
-
-.l {
-    color: black;
-    position: absolute;
-    left: 32%;
-    top: 75%;
-}
-
-.l:hover{
-    opacity: 0.8;
-}
-*/
 main {
     overflow-x: hidden;
     width: 100%;
