--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,9 @@ html {
 }
 
 .na {
-    position: absolute;
-    left: 45%;
-    color: black;
-    margin-top: -35px;
+   position: relative;
+   left: 95px;
+   bottom: 30px;
 }
 
 .page{
@@ -40,6 +39,11 @@ html {
     color: black;
 }
 
+a{
+   color: black;
+   text-decoration: none;
+}
+
 main {
     overflow-x: hidden;
     width: 100%;
@@ -54,7 +58,7 @@ main {
 div.services {
     display: block;
     margin: auto;
-    margin-top: 660px;
+    margin-top: 600px;
     margin-left: 590px;
 }
 
