--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,74 @@
 :root {
-    --goo-blue: #3f48cc;
-    --nav-bar: #808080;
+  --goo-blue: #3f48cc;
+  --nav-bar: #808080;
 }
 
 html {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
-.logo{
-    width: 80px;
-    height: 40px;
-    margin-left: 10px;
+.logo {
+  width: 80px;
+  height: 40px;
+  margin-left: 10px;
 }
 
 .na {
-   position: relative;
-   left: 95px;
-   bottom: 30px;
+  position: relative;
+  left: 95px;
+  bottom: 30px;
 }
 
-.page{
-    position: absolute;
-    top: 10%;
-    left: 26%;
+.page {
+  position: absolute;
+  top: 10%;
+  left: 26%;
 }
 
-.button{
-    background-color: var(--nav-bar);
-    border: none;
-    border-radius: 5px;
+.services-container {
+  background-color: var(--nav-bar);
+  border: none;
+  border-radius: 5px;
+  display: block;
+  width: max-content;
+  margin: auto;
 }
 
 .b {
-    position: relative;
+  position: relative;
 }
 
-a{
-   color: black;
-   text-decoration: none;
+a {
+  color: black;
+  text-decoration: none;
 }
 
-a:hover{
-    opacity: 0.5;
+a:hover {
+  opacity: 0.5;
 }
 main {
-    overflow-x: hidden;
-    width: 100%;
-    position:absolute;
-    z-index: -10;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  overflow-x: hidden;
+  width: 100%;
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 div.services {
-    display: block;
-    margin: auto;
-    margin-top: 550px;
-    margin-left: 590px;
+  display: block;
 }
 
 div.services span {
-    display: inline-block;
-    margin: 0.25em;
+  display: inline-block;
+  margin: 0.25em;
+}
+
+img.main-logo {
+  padding-left: 25vw;
+  padding-right: 25vw;
+  width: 50vw;
+  height: auto;
 }
