--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
   --goo-blue: #3f48cc;
-  --nav-bar: #808080;
+  --nav-bar: #BFBFFF;
 }
 
 html,
@@ -23,7 +23,6 @@ body {
 }
 
 .services-container {
-  background-color: var(--nav-bar);
   border: none;
   border-radius: 5px;
   display: block;
@@ -41,7 +40,7 @@ a {
 }
 
 a:hover {
-  opacity: 0.5;
+  opacity: 0.8;
 }
 main {
   overflow: hidden;
@@ -71,7 +70,7 @@ img.main-logo {
 
 span.service-card {
   display: inline-block;
-  border: 2px ridge var(--goo-blue);
+  border: 2px ridge var(--nav-bar);
   border-radius: 1vw;
 }
 
