--- a/styles.css
+++ b/styles.css
@@ -146,3 +146,26 @@ form table {
 textarea {
   resize: none;
 }
+span.threads{
+  padding-right: 80px;
+  padding-left: 80px;
+}
+button.forumButton{
+  background-color: black; 
+  color: white; 
+  border: 2px solid #000000;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  margin-top: 32px;
+  margin-bottom: 0px;
+}
+button.forumButton:hover{
+  background-color: white;
+  color: black;
+}
